--- a/main.html
+++ b/main.html
@@ -10,6 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Feedback Form</h1>
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" minlength="3" maxlength="50">
+		<label for="portfolio">PortFolio</label>
+		<input type="url" id="portfolio">
+		<label for="favColor">Favourite Color</label>
+		<select id="favColor">
+			<option value="blue">Blue</option>
+			<option value="red">Red</option>
+			<option value="green">Green</option>
+		</select>
+		<label for="likeness">Likeness (between 0 and 100)</label>
+		<input type="range" id="likeness" min="1" max="100">
+	</form>
 
 </body>
 
